--- a/mainapp/templates/mainapp/products.html
+++ b/mainapp/templates/mainapp/products.html
@@ -11,8 +11,9 @@
 		<div class="details">
 			<div class="links clearfix">
 				<ul class="links-menu">
-					{% for link in links_menu %}
-					<li><a href="{{link.href}}" class="active">{{link.name}}</a></li>
+					<li><a href="#" class="active">ВСЕ</a></li>
+					{% for menu in products_menu %}
+					<li><a href="#" class="active">{{menu.category_name}}</a></li>
 					{% endfor %}
 				</ul>
 			</div>
