--- a/geekshop/templates/geekshop/base.html
+++ b/geekshop/templates/geekshop/base.html
@@ -6,6 +6,7 @@
 	<title>{{title|title}}</title>
 	<link rel="stylesheet" type="text/css" href="{% static '/geekshop/style.css' %}">
 	<link rel="stylesheet" href="{% static 'geekshop/fonts/font-awesome/css/font-awesome.css' %}">
+    <link rel="stylesheet" href="{% static 'font-awesome/css/font-awesome.min.css' %}">
 </head>
 <body>
 	<div class="container">
