--- a/geekshop/templates/geekshop/inc/top_menu.html
+++ b/geekshop/templates/geekshop/inc/top_menu.html
@@ -1,7 +1,7 @@
 <a href="{% url 'index' %}" class="logo"></a>
 <ul class="menu">
     <li><a href="{% url 'index' %}" class="active">домой</a></li>
-    <li><a href="{% url 'products' %}">продукты</a></li>
+    <li><a href="{% url 'products:index' %}">продукты</a></li>
     <li><a href="{% url 'contacts' %}">контакты</a></li>
     {% if user.is_authenticated %}
         <li>
@@ -16,6 +16,13 @@
         {% else %}
           <a href="{% url 'auth:login' %}">войти</a>
         {% endif %}
+        {% if basket %} {{ basket.length }} {% endif %}
+    </li>
+    <li>
+        <a href="#" class="basket bask1">
+                    <div>{% if basket %} {{ basket|length }} {% endif %}</div>
+                    <i class="fa fa-shopping-basket" aria-hidden="true"></i>
+                </a>
     </li>
 </ul>
 <a href="#" class="search"></a>
