--- a/authapp/templates/authapp/login.html
+++ b/authapp/templates/authapp/login.html
@@ -9,6 +9,9 @@
             </div>
     <form class="form-horizontal" action="{% url 'auth:login' %}" method="post">
         {% csrf_token %}
+            {% if next %}
+                <input type="hidden" name="next" value="{{ next }}">
+            {% endif %}
         {{ login_form.as_p }}
         <br>
         <input class="form-control btn btn-outline-success" type="submit" value="войти">
