--- a/geekshop/static/geekshop/style.css
+++ b/geekshop/static/geekshop/style.css
@@ -82,8 +82,8 @@ html, body {
 }
 .basket {
 	display: block;
-	/*width: 23px;
-	height: 23px;	
+	width: 120px;
+	/*height: 23px;
 	/*background-image: url(img/basket.png);*/
 	position: absolute;
 	top: 63px;
@@ -92,7 +92,7 @@ html, body {
 }
 .bask1 {
 	text-decoration: none;
-	color: red;
+	color: #ff0000;
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
