--- a/geekshop/templates/geekshop/index.html
+++ b/geekshop/templates/geekshop/index.html
@@ -6,7 +6,6 @@
 				{% include 'geekshop/inc/top_menu.html' %}
 			</div>
 			<div class="text-slider">
-				<h3 class="green">тенденции {% now "Y" %}</h3>
 				<h3 class="big"> удобные стулья</h3>
 				<p>Новый уровень комфорта. Отличные характеристики.</p>
 				<a href="#" class="button-order">заказать <img src="{% static '/geekshop/img/arrow.png' %}" alt=""></a>
@@ -26,7 +25,7 @@
 			<div class="tab-content">
 				{% for product in products %}
 				<div class="block">
-					<a href="#"><img src="/media/{{ product.image }}" alt="">
+					<a href="{% url 'mainapp:detail' pk=product.pk %}"><img src="/media/{{ product.image }}" alt="">
 						<div class="text">
 							<img src="{% static '/geekshop/img/icon-hover.png' %}" alt="img">
 							<h4>{{ product.name }}</h4>
