--- a/authapp/templates/authapp/edit.html
+++ b/authapp/templates/authapp/edit.html
@@ -8,11 +8,17 @@
                 Редактирование профиля - {{user.username}}
             </div>
     <div class="user_avatar">
+    {% if user.social_login %}
+        <img src="{{ user.avatar|default:"avatar.png" }}" class="w-25">
+        {% else %}
         <img src="/media/{{ user.avatar|default:"avatar.png" }}" class="w-25">
+    {% endif %}
     </div>
     <form class="form-horizontal" action="{% url 'auth:edit' %}" method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ edit_form.as_p }}
+        {{ profile_edit_form.as_p }}
+
         <br>
         <input class="form-control btn btn-outline-success" type="submit" value="сохранить">
     </form>
