--- a/authapp/templates/authapp/login.html
+++ b/authapp/templates/authapp/login.html
@@ -23,5 +23,11 @@
             регистрация
         </a>
     </button>
+    <button class="btn btn-round form-control">
+        <a href="{% url 'social:begin' 'vk-oauth2' %}?next=/">
+         Вход через ВКонтакте
+        </a>
+    </button>
+
 </div>
 {% endblock %}
