--- a/ordersapp/templates/ordersapp/order_detail.html
+++ b/ordersapp/templates/ordersapp/order_detail.html
@@ -3,7 +3,7 @@
 
 
 {% block content %}
-   {% include 'ordersapp/includes/inc_order_summary.html' %}
+   {% include 'ordersapp/includes/order_summary.html' %}
    <div class="basket_list">
        {% for item in object.orderitems.select_related %}
            <div class="basket_record">
@@ -14,17 +14,17 @@
                </span>
                <span class="product_name">{{ item.product.name }}</span>
                <span class="product_price">
-                   {{ item.product.price }}&nbspруб
+                   {{ item.product.price }}р.
                </span>
                <span class="product_quantitiy">
                    x {{ item.quantity }} шт.
                </span>
                <span class="product_cost">
-                    = {{ item.get_product_cost }}&nbspруб
+                    = {{ item.get_product_cost }}р.
                </span>
            </div>
        {% endfor %}
    </div>
-   {% include 'ordersapp/includes/inc_order_actions.html' %}
+   {% include 'ordersapp/includes/order_actions.html' %}
 
 {% endblock %}
