--- a/ordersapp/templates/ordersapp/order_form.html
+++ b/ordersapp/templates/ordersapp/order_form.html
@@ -2,8 +2,9 @@
 {% load static %}
 
 {% block js %}
-    <script src="{% static 'ordersapp/js/orders_scripts.js' %}"></script>
-    <script src="{% static 'ordersapp/js/jquery.formset.js' %}"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="includes/script.js"></script>
+    <script src="includes/jquery.formset.js"></script>
 {% endblock %}
 
 {% block content %}
@@ -21,7 +22,7 @@
                        {% endif %}
                 </div>
                 <div class="card-body">
-            {% include 'ordersapp/includes/inc_order_summary.html' %}
+            {% include 'ordersapp/includes/order_summary.html' %}
             <div class="order_form">
                <form action="" method="post">
                    {% csrf_token %}
@@ -31,7 +32,7 @@
                        {% for form in orderitems.forms %}
                            {% if forloop.first %}
                                <thead>
-                               <tr class="formset_row">
+                               <tr >
                                    {% for field in form.visible_fields %}
                                        <th class="{% cycle 'td1' 'td2' 'td3' %} order formset_td">
                                            {{ field.label|capfirst }}
@@ -64,7 +65,7 @@
                        {% endfor %}
                    </table>
                    <button type="submit" value="сохранить" class="btn btn-default btn-round form-control last">сохранить</button>
-                   {% include 'ordersapp/includes/inc_order_actions.html' %}
+                   {% include 'ordersapp/includes/order_actions.html' %}
                </form>
             </div>
                 </div>
